# bot_oleg

./: .gitignore  Cargo.toml  LICENSE  api_nekto.py  assistant.py  bot.py  command_ass.py  command_nekto.py  command_oleg.py  command_qrand.py  command_rm.py  command_sd.py  consts.py  db.py  env.sample  main.py  utils.py
res/: env.sample
src/: bot_command.rs  db.rs  ext.rs  fmt.rs  main.rs  settings.rs
src/bot_command/: core.rs  find.rs  help.rs  oleg.rs  rm.rs  sd.rs  translate.rs  what.rs
src/bot_command/core/: bing_search.rs  currency_exchangerate.rs  google_translate.rs  sd_draw.rs  sd_what.rs
src/bot_command/oleg/: oleg_command.rs
src/bot_command/oleg/oleg_command/: ban.rs  draw.rs  exchange_rates.rs  get_time.rs  recognize.rs  search.rs  translate.rs
